force-app/main/default/objects/Job_Application__c/Job_Application__c.object-meta.xml
<CustomObject>
    <label>職位申請表</label>
    <nameField>
        <displayFormat>D-{000000000}</displayFormat>
        <label>職位申請表番号</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>