force-app/main/default/objects/Job_Application__c/fields/Average__c.field-meta.xml
<CustomField>
    <fullName>Average__c</fullName>
    <formula>Total_Rating__c  /  Number_of_Reviews__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>アベレージ</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>