force-app/main/default/objects/Job_Application__c/fields/Candidate__c.field-meta.xml
<CustomField>
    <fullName>Candidate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>候補者</label>
    <referenceTo>Candidate__c</referenceTo>
    <relationshipLabel>職位申請表</relationshipLabel>
    <relationshipName>Kohosha</relationshipName>
    <type>Lookup</type>
</CustomField>