force-app/main/default/objects/Job_Application__c/fields/Position__c.field-meta.xml
<CustomField>
    <fullName>Position__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>役職</label>
    <referenceTo>Position__c</referenceTo>
    <relationshipLabel>職位申請表</relationshipLabel>
    <relationshipName>Yakusyoku</relationshipName>
    <type>Lookup</type>
</CustomField>