force-app/main/default/objects/Job_Application__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>段階</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>新規</fullName>
            </value>
            <value>
                <fullName>電話通知</fullName>
            </value>
            <value>
                <fullName>面接</fullName>
            </value>
            <value>
                <fullName>提供職務</fullName>
            </value>
            <value>
                <fullName>雇用</fullName>
            </value>
            <value>
                <fullName>謝絶</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>